RESOLVED FIXED206164
[LFC][Integration] editing/text-iterator/findString.html fails on iOS
https://bugs.webkit.org/show_bug.cgi?id=206164
Summary [LFC][Integration] editing/text-iterator/findString.html fails on iOS
Antti Koivisto
Reported 2020-01-13 02:20:20 PST
One of the subtests fails with Searching for ‘a’ in long string with options [AtWordStarts]: FAIL: Expected a match at 6146,6147 but got a match at 6145,6147 instead. Looks like some sort of text iterator end-of-line handling issue.
Attachments
patch (2.38 KB, patch)
2020-01-13 06:47 PST, Antti Koivisto
zalan: review+
Antti Koivisto
Comment 1 2020-01-13 06:47:02 PST
Antti Koivisto
Comment 2 2020-01-13 08:10:05 PST
Radar WebKit Bug Importer
Comment 3 2020-01-13 08:11:16 PST
Note You need to log in before you can comment on or make changes to this bug.