[LFC][Integration] editing/text-iterator/findString.html fails on iOS https://bugs.webkit.org/show_bug.cgi?id=206164

Reviewed by Zalan Bujtas.

Source/WebCore:

* rendering/line/LineLayoutTraversalDisplayRunPath.h:
(WebCore::LineLayoutTraversal::DisplayRunPath::isLastOnLine const):

The test here was reversed.

LayoutTests:

* platform/ios/TestExpectations:



Canonical link: https://commits.webkit.org/219264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254431 268f45cc-cd09-0410-ab3c-d52691b4dbfc